@@ -177,6 +177,7 @@ S3method(weightedCor, default)
 S3method(coef, pcr)
 S3method(coef, wa)
 S3method(fitted, pcr)
+S3method(fitted, prcurve)
 S3method(fitted, bootstrap.mat)
 S3method(fitted, logitreg)
 S3method(fitted, mat)
