@@ -127,6 +127,10 @@ abernethy2 <- abernethy[, -(37:38)]
 aber.pc <- prcurve(abernethy2, method = "ca", trace = TRUE,
                    vary = FALSE, penalty = 1.4)
 
+## Extract fitted values
+fit <- fitted(aber.pc) ## locations on curve
+abun <- fitted(aber.pc, type = "smooths") ## fitted response
+
 ## Fit the principal curve using varying complexity of smoothers
 ## for each species
 aber.pc2 <- prcurve(abernethy2, method = "ca", trace = TRUE,
